--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
-body, html{
+<!-- css/styles.css making SilusGW-rolling.bauska.org -->
+body, html {
   height: 100%;
   margin: 0;
   display: flex;
@@ -9,14 +10,14 @@ body, html{
   font-size: 62.5%
 }
 
-/* The @property CSS at-rule is part of the CSS Houdini umbrella of APIs. It */
+/* The @property CSS at-rule is part of the CSS Houdini umbrella of APIs. */
 @property --angle {
-    syntax: '<angle>';
-    initial-value: 0deg;
-    inherits: false;
+  syntax: '<angle>';
+  initial-value: 0deg;
+  inherits: false;
 }
 
-.spiral{
+.spiral {
   display: flex;
   align-items: center;
   gap: 10px;
@@ -25,16 +26,16 @@ body, html{
   font-family: "sans-serif";
 }
 
-@keyframes spiral{
-  0%{
+@keyframes spiral {
+  0% {
     --angle: 0deg;
   }
-  100%{
+  100% {
     --angle: 360deg;
   }
 }
 
-.character{
+.character {
   font-size: 2.8rem;
   color: white;
   text-transform: uppercase;
@@ -42,8 +43,8 @@ body, html{
   animation: spiral 4s linear infinite;
 }
 
-@media (max-width: 490px){
-  .character{
+@media (max-width: 490px) {
+  .character {
     font-size: 2.2rem
   }
 }
